// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shipping label should render free shipping 1`] = `
<div
  class="sg-15e5xww-text engage__product__header__shipping"
  role="text"
>
  <span>
    shipping.free
  </span>
</div>
`;

exports[`Shipping label should render shipping price 1`] = `
<div
  class="sg-15e5xww-text engage__product__header__shipping"
  role="text"
>
  <span>
    shipping.cost
    p
  </span>
</div>
`;
